--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ debugpy==1.6.6
 decorator==5.1.1
 executing==1.2.0
 fonttools==4.39.3
+hmmlearn==0.2.8
 idna==3.4
 ipykernel==6.22.0
 ipython==8.12.0
